[metadata]
name = mypackage
version = attr: src.mypackage.VERSION
description = My package description
license = MIT License
url = https://
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src

[options.packages.find]
where = src
